visir and mbl added

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+    <h2>Fotbolti.net</h2>
     {{fotboltinet}}
+    <br>
+    <h2>Visir.is</h2>
     {{visir}}
+    <br>
+    <h2>Mbl.is</h2>
+    {{mbl}}
+    <br>
 </body>
 </html>
